[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = "Template for AtCoder"
authors = ["Yumax-panda "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.taskipy.tasks]
check = "python3 src/answer.py < src/input.txt"
fmt = "black src/answer.py"
